--- a/index.html
+++ b/index.html
@@ -1,162 +1,89 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Effective Solutions for Your Business</title>
-  </head>
-  <body>
-    <header>
+<head>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Effective Solutions for Your Business</title>
+<link rel="stylesheet" href="css/styles.css">
+<link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
+</head>
+<body>
+<header>
   <nav>
-    <a href="./index.html" class="logo">
-      <span class="logo-web">Web</span><span class="logo-studio">Studio</span>
-    </a>
-
+    <a href="./index.html" class="logo-header">Web<span>Studio</span></a>
     <ul class="main-nav">
-      <li><a href="#" class="nav-studio">Studio</a></li>
-      <li><a href="#" class="nav-portfolio">Portfolio</a></li>
-      <li><a href="#" class="nav-contacts">Contacts</a></li>
+      <li><a href="./index.html" class="nav-link">Studio</a></li>
+      <li><a href="#" class="nav-link">Portfolio</a></li>
+      <li><a href="#" class="nav-link">Contacts</a></li>
     </ul>
   </nav>
-
-  <address class="header-contacts">
+  <address class="header-contact">
     <ul>
-      <li><a href="mailto:info@devstudio.com" class="contact-email">info@devstudio.com</a></li>
-      <li><a href="tel:+110001111111" class="contact-phone">+11 (000) 111-11-11</a></li>
+      <li><a href="mailto:info@devstudio.com" class="contact-link">info@devstudio.com</a></li>
+      <li><a href="tel:+110001111111" class="contact-link">+11 (000) 111-11-11</a></li>
     </ul>
   </address>
 </header>
 
-    <main>
-      <section class="hero-section">
-  <h1>Effective Solutions for Your Business</h1>
-  <button type="button">Order Service</button>
-</section>
+<main>
+  <section class="hero-section">
+    <h1 class="hero-title">effective-solutions-for-your-business</h1>
+    <button type="button" class="hero-button">Order Service</button>
+  </section>
 
+  <section class="services-section">
+    <h2 class="visually-hidden">Our Services</h2>
+    <ul class="service-list">
+      <li class="service-item">
+        <h3 class="service-title">Strategy</h3>
+        <p class="service-text">Our goal is to identify the business problem to walk away with the perfect and creative solution.</p>
+      </li>
+      <li class="service-item">
+        <h3 class="service-title">Punctuality</h3>
+        <p class="service-text">Bring the key message to the brand's audience for the best price within the shortest possible time.</p>
+      </li>
+      <li class="service-item">
+        <h3 class="service-title">Diligence</h3>
+        <p class="service-text">Research and confirm brands with the strongest digital growth opportunities and minimize risk.</p>
+      </li>
+      <li class="service-item">
+        <h3 class="service-title">Technologies</h3>
+        <p class="service-text">Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.</p>
+      </li>
+    </ul>
+  </section>
 
-      <section class="services-section">
-  <h2 class="visually-hidden">Our Services</h2>
-  <ul>
-    <li>
-      <h3>Strategy</h3>
-      <p>
-        Our goal is to identify the business problem to walk away with the
-        perfect and creative solution.
-      </p>
-    </li>
-    <li>
-      <h3>Punctuality</h3>
-      <p>
-        Bring the key message to the brand's audience for the best price
-        within the shortest possible time.
-      </p>
-    </li>
-    <li>
-      <h3>Diligence</h3>
-      <p>
-        Research and confirm brands with the strongest digital growth
-        opportunities and minimize risk.
-      </p>
-    </li>
-    <li>
-      <h3>Technologies</h3>
-      <p>
-        Design practice focused on digital experiences. We bring forth a
-        deep passion for problem-solving.
-      </p>
-    </li>
-  </ul>
-</section>
+  <section class="team-section">
+    <h2 class="team-title">Our Team</h2>
+    <ul class="team-list">
+      <li class="team-item">
+        <img src="./images/photo1.jpg" alt="Bearded man in a checkered shirt" width="264">
+        <h3 class="team-name">Mark Guerrero</h3>
+        <p class="team-role">Product Designer</p>
+      </li>
+      <li class="team-item">
+        <img src="./images/photo2.jpg" alt="Smiling man in a light blue shirt" width="264">
+        <h3 class="team-name">Tom Ford</h3>
+        <p class="team-role">Frontend Developer</p>
+      </li>
+      <li class="team-item">
+        <img src="./images/photo3.jpg" alt="Young beautiful woman" width="264">
+        <h3 class="team-name">Camila Garcia</h3>
+        <p class="team-role">Marketing</p>
+      </li>
+      <li class="team-item">
+        <img src="./images/photo4.jpg" alt="Smiling bearded man in a grey t-shirt" width="264">
+        <h3 class="team-name">Daniel Wilson</h3>
+        <p class="team-role">UI Designer</p>
+      </li>
+    </ul>
+  </section>
 
+</main>
 
-      <section class="team-section">
-  <h2 class="team-title">Our Team</h2>
-  <ul class="team-list">
-    <li class="team-item">
-      <img
-        src="./images/photo1.jpg"
-        alt="Bearded man in a checkered shirt"
-        width="264"
-      />
-      <h3 class="team-name">Mark Guerrero</h3>
-      <p class="team-role">Product Designer</p>
-    </li>
-    <li class="team-item">
-      <img
-        src="./images/photo2.jpg"
-        alt="Smiling man in a light blue shirt"
-        width="264"
-      />
-      <h3 class="team-name">Tom Ford</h3>
-      <p class="team-role">Frontend Developer</p>
-    </li>
-    <li class="team-item">
-      <img
-        src="./images/photo3.jpg"
-        alt="Young beautiful woman"
-        width="264"
-      />
-      <h3 class="team-name">Camila Garcia</h3>
-      <p class="team-role">Marketing</p>
-    </li>
-    <li class="team-item">
-      <img
-        src="./images/photo4.jpg"
-        alt="Smiling bearded man in a grey t-shirt"
-        width="264"
-      />
-      <h3 class="team-name">Daniel Wilson</h3>
-      <p class="team-role">UI Designer</p>
-    </li>
-  </ul>
-</section>
-
-<section class="portfolio-section">
-  <h2 class="portfolio-title">Our Portfolio</h2>
-  <ul class="portfolio-list">
-    <li class="portfolio-item">
-      <img src="./images/img.jpg" alt="Modern application in a purple and white color scheme." width="360" />
-      <h3 class="portfolio-name">Banking App</h3>
-      <p class="portfolio-role">App</p>
-    </li>
-    <li class="portfolio-item">
-      <img src="./images/img-1.jpg" alt="Mobile phone scanning contactless payment terminal." width="360" />
-      <h3 class="portfolio-name">Cashless Payment</h3>
-      <p class="portfolio-role">Marketing</p>
-    </li>
-    <li class="portfolio-item">
-      <img src="./images/img-2.jpg" alt="Meditation app displayed on laptop and smartphone" width="360" />
-      <h3 class="portfolio-name">Meditation App</h3>
-      <p class="portfolio-role">App</p>
-    </li>
-    <li class="portfolio-item">
-      <img src="./images/img-3.jpg" alt="Professional taxi service driver in a modern, comfortable vehicle." width="360" />
-      <h3 class="portfolio-name">Taxi Service</h3>
-      <p class="portfolio-role">Marketing</p>
-    </li>
-    <li class="portfolio-item">
-      <img src="./images/img-4.jpg" alt="Smartphone displaying a selection of moon-themed wallpapers." width="360" />
-      <h3 class="portfolio-name">Screen Illustrations</h3>
-      <p class="portfolio-role">Design</p>
-    </li>
-    <li class="portfolio-item">
-      <img src="./images/img-5.jpg" alt="Female student enjoying online courses on her smartphone." width="360" />
-      <h3 class="portfolio-name">Online Courses</h3>
-      <p class="portfolio-role">Marketing</p>
-    </li>
-  </ul>
-</section>
-
-    </main>
-
-    <footer>
-      <a href="./index.html" class="logo">
-      <span class="logo-web">Web</span><span class="logo-studio">Studio</span>
-    </a>
-      <p>
-        Increase the flow of customers and sales for your business with digital
-        marketing & growth solutions.
-      </p>
-    </footer>
-  </body>
+<footer class="footer-section">
+  <a href="./index.html" class="footer-logo">Web<span>Studio</span></a>
+  <p class="footer-text">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
+</footer>
+</body>
 </html>
