--- a/index.html
+++ b/index.html
@@ -83,37 +83,32 @@
   <h2 class="portfolio-title">Our Portfolio</h2>
   <ul class="portfolio-list">
     <li class="portfolio-item">
-      <img src="images/img.jpg" alt="Modern application in a purple and white color scheme." width="360">
+      <img src="./images/img.jpg" alt="Modern application in a purple and white color scheme.">
       <h3 class="portfolio-item-title">Banking App</h3>
       <p class="portfolio-item-text">App</p>
     </li>
-
     <li class="portfolio-item">
-      <img src="images/img-1.jpg" alt="Mobile phone scanning contactless payment terminal." width="360">
+      <img src="./images/img1.jpg" alt="Mobile phone scanning contactless payment terminal.">
       <h3 class="portfolio-item-title">Cashless Payment</h3>
       <p class="portfolio-item-text">Marketing</p>
     </li>
-
     <li class="portfolio-item">
-      <img src="images/img-2.jpg" alt="Meditation app displayed on laptop and smartphone" width="360">
+      <img src="./images/img2.jpg" alt="Meditation app displayed on laptop and smartphone.">
       <h3 class="portfolio-item-title">Meditation App</h3>
       <p class="portfolio-item-text">App</p>
     </li>
-
     <li class="portfolio-item">
-      <img src="images/img-3.jpg" alt="Professional taxi service driver in a modern, comfortable vehicle." width="360">
+      <img src="./images/img3.jpg" alt="Professional taxi service driver in a modern, comfortable vehicle.">
       <h3 class="portfolio-item-title">Taxi Service</h3>
       <p class="portfolio-item-text">Marketing</p>
     </li>
-
     <li class="portfolio-item">
-      <img src="images/img-4.jpg" alt="Smartphone displaying a selection of moon-themed wallpapers." width="360">
+      <img src="./images/img4.jpg" alt="Smartphone displaying a selection of moon-themed wallpapers.">
       <h3 class="portfolio-item-title">Screen Illustrations</h3>
       <p class="portfolio-item-text">Design</p>
     </li>
-
     <li class="portfolio-item">
-      <img src="images/img-5.jpg" alt="Female student enjoying online courses on her smartphone." width="360">
+      <img src="./images/img5.jpg" alt="Female student enjoying online courses on her smartphone.">
       <h3 class="portfolio-item-title">Online Courses</h3>
       <p class="portfolio-item-text">Marketing</p>
     </li>
