--- a/index.html
+++ b/index.html
@@ -56,22 +56,22 @@
     <h2 class="team-title">Our Team</h2>
     <ul>
       <li style="background-color:#FFFFFF;">
-        <img src="./images/member1.jpg" alt="Product Designer" width="360">
+        <img src="./images/photo1.jpg" alt="Product Designer" width="360">
         <h3 class="team-name">Mark Guerrero</h3>
         <p class="team-role">Product Designer</p>
       </li>
       <li style="background-color:#FFFFFF;">
-        <img src="./images/member2.jpg" alt="Frontend Developer" width="360">
+        <img src="./images/photo2.jpg" alt="Frontend Developer" width="360">
         <h3 class="team-name">Tom Ford</h3>
         <p class="team-role">Frontend Developer</p>
       </li>
       <li style="background-color:#FFFFFF;">
-        <img src="./images/member3.jpg" alt="Marketing" width="360">
+        <img src="./images/photo3.jpg" alt="Marketing" width="360">
         <h3 class="team-name">Camila Garcia</h3>
         <p class="team-role">Marketing</p>
       </li>
       <li style="background-color:#FFFFFF;">
-        <img src="./images/member4.jpg" alt="UI Designer" width="360">
+        <img src="./images/photo3.jpg" alt="UI Designer" width="360">
         <h3 class="team-name">Daniel Wilson</h3>
         <p class="team-role">UI Designer</p>
       </li>
