--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
     <a href="./index.html" class="logo-header">Web<span>Studio</span></a>
     <ul class="main-nav">
       <li><a href="./index.html" class="nav-link">Studio</a></li>
-      <li><a href="#" class="nav-link">Portfolio</a></li>
-      <li><a href="#" class="nav-link">Contacts</a></li>
+      <li><a href="#portfolio" class="nav-link">Portfolio</a></li>
+      <li><a href="#contacts" class="nav-link">Contacts</a></li>
     </ul>
   </nav>
-  <address class="header-contact">
+  <address class="header-contact" id="contacts">
     <ul>
       <li><a href="mailto:info@devstudio.com" class="contact-link">info@devstudio.com</a></li>
       <li><a href="tel:+110001111111" class="contact-link">+11 (000) 111-11-11</a></li>
@@ -54,7 +54,7 @@
     </ul>
   </section>
 
-  
+
   <section class="team-section">
     <h2 class="team-title">Our Team</h2>
     <ul class="team-list">
@@ -81,36 +81,38 @@
     </ul>
   </section>
 
-<section class="portfolio-section">
+<section class="portfolio-section" id="portfolio">
+  <h2 class="portfolio-title">Our Portfolio</h2>
+  <ul class="portfolio-list">>
   <h2 class="portfolio-title">Our Portfolio</h2>
   <ul class="portfolio-list">
     <li class="portfolio-item">
-      <img src="./images/img.jpg" alt="Modern application in a purple and white color scheme.">
+      <img src="./images/img.jpg" alt="Modern application in a purple and white color scheme." width="360">
       <h3 class="portfolio-item-title">Banking App</h3>
       <p class="portfolio-item-text">App</p>
     </li>
     <li class="portfolio-item">
-      <img src="./images/img1.jpg" alt="Mobile phone scanning contactless payment terminal.">
+      <img src="./images/img1.jpg" alt="Mobile phone scanning contactless payment terminal."width="360">
       <h3 class="portfolio-item-title">Cashless Payment</h3>
       <p class="portfolio-item-text">Marketing</p>
     </li>
     <li class="portfolio-item">
-      <img src="./images/img2.jpg" alt="Meditation app displayed on laptop and smartphone.">
+      <img src="./images/img2.jpg" alt="Meditation app displayed on laptop and smartphone."width="360">
       <h3 class="portfolio-item-title">Meditation App</h3>
       <p class="portfolio-item-text">App</p>
     </li>
     <li class="portfolio-item">
-      <img src="./images/img3.jpg" alt="Professional taxi service driver in a modern, comfortable vehicle.">
+      <img src="./images/img3.jpg" alt="Professional taxi service driver in a modern, comfortable vehicle."width="360">
       <h3 class="portfolio-item-title">Taxi Service</h3>
       <p class="portfolio-item-text">Marketing</p>
     </li>
     <li class="portfolio-item">
-      <img src="./images/img4.jpg" alt="Smartphone displaying a selection of moon-themed wallpapers.">
+      <img src="./images/img4.jpg" alt="Smartphone displaying a selection of moon-themed wallpapers."width="360">
       <h3 class="portfolio-item-title">Screen Illustrations</h3>
       <p class="portfolio-item-text">Design</p>
     </li>
     <li class="portfolio-item">
-      <img src="./images/img5.jpg" alt="Female student enjoying online courses on her smartphone.">
+      <img src="./images/img5.jpg" alt="Female student enjoying online courses on her smartphone."width="360">
       <h3 class="portfolio-item-title">Online Courses</h3>
       <p class="portfolio-item-text">Marketing</p>
     </li>
@@ -119,7 +121,7 @@
 </main>
 
 <footer class="footer-section">
-  <a href="./index.html" class="footer-logo">Web<span>Studio</span></a>
+  <a href="./index.html" class="footer-logo">Web<span class="brand-name">Studio</span></a>
   <p class="footer-text">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
 </footer>
 </body>
