--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <link rel="stylesheet" href="css/styles.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
 </head>
 <body>
 <header>
@@ -15,8 +15,8 @@
     <a href="./index.html" class="logo-header">Web<span>Studio</span></a>
     <ul class="main-nav">
       <li><a href="./index.html" class="nav-link">Studio</a></li>
-      <li><a href="#portfolio" class="nav-link">Portfolio</a></li>
-      <li><a href="#contacts" class="nav-link">Contacts</a></li>
+      <li><a href="" class="nav-link">Portfolio</a></li>
+      <li><a href="" class="nav-link">Contacts</a></li>
     </ul>
   </nav>
   <address class="header-contact" id="contacts">
@@ -123,8 +123,8 @@
 </main>
 
 <footer class="footer-section">
-  <a href="./index.html" class="footer-logo">Web<span class="brand-name">Studio</span></a>
-  <p class="footer-text">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
+  <a href="./index.html" class="footer-logo">Web<span>Studio</span></a>
+  <p><span class="footer-text">© 2025 WebStudio. All Rights Reserved.</span></p>
 </footer>
 </body>
 </html>
