--- a/index.html
+++ b/index.html
@@ -123,8 +123,8 @@
 </main>
 
 <footer class="footer-section">
-  <a href="./index.html" class="footer-logo">Web<span>Studio</span></a>
-  <p><span class="footer-text">© 2025 WebStudio. All Rights Reserved.</span></p>
+  <a href="./index.html" class="footer-logo">Web<span class="footer-span">Studio</span></a>
+  <p class="footer-text">Increase the flow of customers and sales for your business with digital marketing & growth solutions</p>
 </footer>
 </body>
 </html>
