--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
 <main>
   <section class="hero-section">
-    <h1 class="hero-title">effective-solutions-for-your-business</h1>
+    <h1 class="hero-title">effective solutions for your business</h1>
     <button type="button" class="hero-button">Order Service</button>
   </section>
 
